# python-client

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  AUTHORS.rst  CHANGELOG.rst  DEVELOPING.md  LICENSE  README.md  README.rst  TESTING.md  pydoc-markdown.yaml  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
.devcontainer/library-scripts/: python-debian.sh
.github/workflows/: build-docsite.yml  build-sphinx-to-gh-pages.yml  deploy.yml  docs-publish.yml  notify-of-release.yml  publish-to-test-pypi.yml  python-publish.yml  rebase-main.yaml  test-main.yml  test-staging.yml  test.yml
docs/: Makefile  README.txt  authentication.rst  building-documentation.rst  building-documentation.txt  clear_markdown.sh  conf.py  http_operation.rst  index.rst  license.rst  make_markdown.sh  rename_index.sh  requirements.txt  rst_conventions.md  rst_conventions.txt  tmpfile
docs/agents/: index.rst
docs/api/: Makefile  conf.py  index.rst  license.rst  modules.rst  steamship.agents.examples.rst  steamship.agents.memory.rst  steamship.agents.rst  steamship.agents.schema.rst  steamship.agents.tools.question_answering.rst  steamship.agents.tools.rst  steamship.agents.tools.speech_generation.rst  steamship.agents.tools.text_generation.rst  steamship.agents.tools.video_generation.rst  steamship.app.rst  steamship.base.rst  steamship.cli.rst  steamship.client.rst  steamship.experimental.easy.rst  steamship.experimental.package_starters.rst  steamship.experimental.rst  steamship.experimental.transports.rst  steamship.invocable.rst  steamship.plugin.inputs.rst  steamship.plugin.outputs.rst  steamship.plugin.rst  steamship.rst  steamship.utils.rst
docs/concepts/: index.rst
docs/configuration/: authentication.rst  cli.rst  http.rst  index.rst  python.rst
docs/data/: blocks.rst  files.rst  importing.rst  index.rst  workspaces.rst
docs/developing/: async-plugins.rst  configuration.rst  deploying.rst  developing-packages.rst  developing-plugins.rst  developing.rst  environment-setup.rst  index.rst  monitoring.rst  project-creation.rst  running.rst  steamship-manifest.rst  storing-secrets.rst
docs/docs/: .pages  client-reference.md  steamship.agents.examples.chatgpt_api.md  steamship.agents.examples.chatgpt_with_web_and_telegram.md  steamship.agents.examples.document_qa_agent.md  steamship.agents.examples.example_assistant.md  steamship.agents.examples.example_react_assistant.md  steamship.agents.examples.fact_learner.md  steamship.agents.examples.md  steamship.agents.examples.telegram_bot.md  steamship.agents.functional.functions_based.md  steamship.agents.functional.md  steamship.agents.functional.output_parser.md  steamship.agents.llms.md  steamship.agents.llms.openai.md  steamship.agents.logging.md  steamship.agents.md  steamship.agents.mixins.md  steamship.agents.mixins.transports.md  steamship.agents.mixins.transports.steamship_widget.md  steamship.agents.mixins.transports.telegram.md  steamship.agents.mixins.transports.transport.md  steamship.agents.react.md  steamship.agents.react.output_parser.md  steamship.agents.react.react.md  steamship.agents.schema.action.md  steamship.agents.schema.agent.md  steamship.agents.schema.chathistory.md  steamship.agents.schema.context.md  steamship.agents.schema.functions.md  steamship.agents.schema.llm.md  steamship.agents.schema.md  steamship.agents.schema.message_selectors.md  steamship.agents.schema.output_parser.md  steamship.agents.schema.text_splitters.md  steamship.agents.schema.tool.md  steamship.agents.service.agent_service.md  steamship.agents.service.md  steamship.agents.tools.audio_transcription.assembly_speech_to_text_tool.md  steamship.agents.tools.audio_transcription.fetch_audio_urls_from_rss_tool.md  (+120 more)
docs/embedding-search/: index.rst
docs/getting-started/: index.rst  setup.rst
docs/how-to/: index.rst
docs/nextra/: Dockerfile  Makefile  index.rst  make_markdown.sh  rename_link.js
docs/plugins/: index.rst  plugins.rst
docs/reference/: index.rst
docs/workspaces/: blockifying.rst  creating.rst  importing.rst  index.rst  uploading.rst
nbs/: NLUDB Demo.ipynb  demo-snapshot.ipynb  scrape_and_search.ipynb
scripts/: build-docs.sh  create_engine_test_assets.py
src/: indexer_pipeline.py
src/nludb/: __init__.py  classifier.py  corpus.py  embedding_index.py  file.py  models.py  nludb.py  plugin.py  tasks.py
src/nludb_client_py/: skeleton.py
src/steamship/: __init__.py
tests/: __init__.py  conftest.py  helpers.py  test_app_invoke.py  test_classifier.py  test_client.py  test_corpus.py  test_embedding.py  test_embedding_index.py  test_file.py  test_file_embed.py  test_file_ocr.py  test_file_parse.py  test_file_scrape.py  test_file_tags.py  test_models.py  test_nludb.py  test_parsing.py  test_skeleton.py  test_snapshots.py  test_space.py  test_task_comments.py
tests/app/: test_response.py
tests/assets/: demo_package_spec.json  utterances.tsv
tests/base/: test_binary_utils.py  test_task.py  test_training_status_updater.py
tests/client/: helpers.py  test_app.py  test_app_instance.py  test_app_version.py  test_classifier.py  test_client.py  test_corpus.py  test_embedding.py  test_embedding_index.py  test_file.py  test_file_embed.py  test_file_ocr.py  test_file_parse.py  test_file_tags.py  test_models.py  test_parsing.py  test_plugins.py  test_snapshots.py  test_space.py  test_task_comments.py  test_to_pandas.py
tests/data/: test_app.py  test_app_instance.py  test_app_version.py  test_block.py  test_configurable_app_instance.py  test_corpus.py  test_file.py  test_plugins.py  test_space.py  test_task_comments.py  utterances.csv
tests/demo_apps/: configurable_hello_world.py  demo_app.py  hello_world.py  parser.py  parser_plugin.py  plugin_blockifier.py  plugin_blockifier_csv.py  plugin_configurable_tagger.py  plugin_converter.py  plugin_corpus_importer.py  plugin_embedder.py  plugin_file_importer.py  plugin_importer.py  plugin_parser.py  plugin_trainable_tagger.py  (+1 more)
(+2135 files in other folders)
