# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = steamship
description = The fastest way to add language AI to your product.
author = Steamship Team
author_email = developers@steamship.com
license = MIT
long_description = file: README.rst
long_description_content_type = text/markdown; charset=UTF-8
url = https://www.steamship.com
# Add here related links, for example:
project_urls =
    Documentation = https://steamship.com/
    Source = https://github.com/steamship-core/python-client/
    Twitter = https://twitter.com/GetSteamship
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    requests>=2.2
    pydantic==1.10.2
    aiohttp==3.8.1
    inflection==0.5.1
    typing-inspect==0.7.1


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install steamship[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = steamship.module:function
# For example:
# console_scripts =
#     fibonacci = steamship.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension




[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI app and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel



; https://mypy.readthedocs.io/en/latest/config_file.html
[mypy]
strict = True
ignore_missing_imports = True
disallow_subclassing_any = False
disallow_untyped_decorators = False
warn_unreachable = True
junit_xml = reports/mypy/TESTS-mypy.xml
show_error_codes = True

; https://pycqa.github.io/isort/docs/configuration/profiles/
[isort]
profile = black
known_first_party = tests
line_length = 100

; https://docs.pytest.org/en/latest/customize.html#adding-default-options
[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov steamship --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
junit_family = xunit2
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

; https://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = True
[coverage:report]
fail_under = 50
; https://hadialqattan.github.io/pycln/#/?id=cli-options
[pycln]
all = true

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.1
package = steamship
extensions =

[flake8]
inline-quotes = "
max_line_length = 120
max_complexity = 10
doctests = True
ignore = S101,E501,E203,W503,FS003,S311
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
